[project]
name = "rag-module"
version = "3.1.1-SNAPSHOT"
description = "OpenK9 module for Retrieval-Augmented Generation (RAG) operations"
authors = [{ name = "SMC", email = "smc.roma@smc.it" }]
keywords = ["OpenK9", "Generative AI", "RAG"]
license = "AGPL-3.0-or-later"
requires-python = ">=3.12"

[project.urls]
Homepage = "https://www.openk9.io/"
Documentation = "https://www.openk9.io/docs/"
Repository = "https://github.com/smclab/openk9.git"
Issues = "https://github.com/smclab/openk9/issues"

